--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ampache": "~ 0.1.3",
     "st": "~ 0.0.4",
+    "open": "~ 0.0.2",
     "routes": "~ 0.1.0"
   },
   "bin": {
