--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "open": "~ 0.0.2",
     "st": "~ 0.0.4",
     "routes": "~ 0.1.0",
+    "log-timestamp": "~ 0.0.0",
     "rimraf": "~2.0.2"
   },
   "bin": {
