--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "ampache": "~ 0.1.3",
     "open": "~ 0.0.2",
-    "st": "~ 0.0.4",
     "routes": "~ 0.1.0",
     "log-timestamp": "~ 0.0.0",
-    "rimraf": "~2.0.2"
+    "rimraf": "~2.0.2",
+    "mkdirp": "~0.3.3",
+    "async": "~0.1.22",
+    "request": "~2.10.0"
   },
   "bin": {
     "webamp": "./bin/webamp.js"
