--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "ampache": "~ 0.1.3",
     "open": "~ 0.0.2",
     "routes": "~ 0.1.0",
-    "log-timestamp": "~ 0.0.0",
+    "log-timestamp": "~ 0.0.1",
     "rimraf": "~2.0.2",
     "mkdirp": "~0.3.3",
     "async": "~0.1.22",
     "request": "~2.10.0",
-    "latest": "~ 0.0.1"
+    "latest": "~ 0.0.1",
+    "filed": "0.0.7"
   },
   "bin": {
     "webamp": "./bin/webamp.js"
