--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webamp",
+  "name": "ampache-webamp",
   "description": "Ampache web interface",
-  "version": "0.0.25",
+  "version": "0.1.0",
   "author": "Dave Eddy <dave@daveeddy.com> (http://www.daveeddy.com)",
   "contributors": [],
   "repository": {
